--- a/libinput-gestures.conf
+++ b/libinput-gestures.conf
@@ -14,8 +14,8 @@
 
 # note: this file work with nofoot's dwm and st, you can modify your personal operation
 
-gesture swipe left 3 xdotool key super+w # 3指左划: 切换到左边的tag
-gesture swipe right 3 xdotool key super+e # 3指右划: 切换到右边的tag
+gesture swipe left 3 xdotool key super+h # 3指左划: 切换到左边的tag
+gesture swipe right 3 xdotool key super+l # 3指右划: 切换到右边的tag
 gesture swipe down 4 xdotool key super+Tab # 4指下划: 切换回之前的tag
 
 gesture swipe up 3 xdotool key super+O # 3指上划: 显示该tag所有窗口
